config/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hello-openshift
